# seagulls-py

./: .envrc  .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
seagulls-cat-demos/: pyproject.toml
seagulls-cat-demos/src/seagulls/cat_demos/: _cli_command.py  _cli_entry_point.py  _executables.py  _game_session.py  _object_position.py
seagulls-cat-demos/src/seagulls/cat_demos/app/: __init__.py  __main__.py  _cli_command.py  _cli_entry_point.py  _cli_plugin.py  _component_providers.py  _di_container.py  _events.py  _index_scene.py  _main_menu.py  _mob_controls_component.py  _player_controls_component.py  _scene.py  _sprites.py  mob_controls_component.py  player_controls_component.py
seagulls-cat-demos/src/seagulls/cat_demos/engine/: __init__.py  _executables.py  _game_object_components.py  _game_session.py  _input.py  _rendering.py  _scene.py  _session_window_client.py
seagulls-cat-demos/src/seagulls/cat_demos/player/: _sprite.py
seagulls-cat-demos/test/seagulls_test/di/: test_decorators.py
seagulls-cli/: .envrc  pyproject.toml
seagulls-cli/src/seagulls/seagulls_cli/: __init__.py  _application.py  _container_repository.py  _di_container.py  _entry_point.py  _logging_client.py  _runtime_client.py
seagulls-cli/test/seagulls_test/seagulls_cli/: test_container_repository.py
seagulls-devtools/: pyproject.toml
seagulls-devtools/src/seagulls/devtools/: __init__.py  _cli_entry_point.py  _cli_plugin.py  _di_container.py  _flake8_command.py  _mypy_command.py  _publish_command.py  _pytest_command.py  _release_command.py
seagulls-devtools/test/seagulls_test/devtools/: test_cli_entry_point.py
seagulls-engine/: pyproject.toml
seagulls-engine/src/seagulls/app/: __init__.py  _app_interfaces.py  _plugin_client.py  _plugin_exceptions.py  _plugin_interfaces.py
seagulls-engine/src/seagulls/assets/: __init__.py  _manager.py
seagulls-engine/src/seagulls/cli/: __init__.py  _example_command.py  _request.py  _seagulls_command.py
seagulls-engine/src/seagulls/cli_next/: _application.py  _container_repository.py
seagulls-engine/src/seagulls/debug/: _debug_hud.py
seagulls-engine/src/seagulls/engine/: __init__.py  _active_scene_client.py  _basic_scene_manager.py  _blocking_game_session.py  _empty_scene.py  _game_clock.py  _game_controls.py  _game_object.py  _surface_renderer.py  _toggleable_game_object.py  _window_scene.py
seagulls-engine/src/seagulls/eventing/: __init__.py  _interfaces.py
seagulls-engine/src/seagulls/examples/: __init__.py
seagulls-engine/src/seagulls/examples/space_shooter/: __init__.py  _active_ship_client.py  _asteroid_field.py  _laser.py  _score_tracker.py  _ship_destroyed_rule.py  _shooter_scene.py  _shooter_scene_client.py  _space_collisions.py  _space_rock.py
seagulls-engine/src/seagulls/foo/: test_base.py
seagulls-engine/src/seagulls/input/: _client.py
seagulls-engine/src/seagulls/pygame/: __init__.py  _printer.py  _surface.py  _window.py
seagulls-engine/src/seagulls/rendering/: __init__.py  _camera.py  _color.py  _example.py  _game_screen.py  _position.py  _printer.py  _renderable_component.py  _size.py  _sprite.py  _sprite_client.py
seagulls-engine/src/seagulls/rendering/_example/: _components.py  _example.py  _pygame_screen.py  _renderables.py  _scene.py  _screen_provider.py  _session.py  _settings.py
seagulls-engine/src/seagulls/scene/: __init__.py  _game_scene.py
seagulls-engine/src/seagulls/session/: __init__.py  _blocking_game_session.py  _game_session.py
seagulls-engine/test/seagulls_test/app/: test_app_interfaces.py  test_plugin_client.py  test_plugin_interfaces.py
seagulls-engine/test/seagulls_test/assets/: test_manager.py
seagulls-engine/test/seagulls_test/cli/: test_request.py
seagulls-engine/test/seagulls_test/engine/: test_active_scene_client.py  test_basic_scene_manager.py  test_blocking_game_session.py  test_window_scene.py
seagulls-space-shooter-demo/: mypy.ini  pyproject.toml  tox.ini
seagulls-space-shooter-demo/src/seagulls/examples/space_shooter/: _ship_catalog.py  (+1 more)
seagulls-space-shooter-demo/src/seagulls/space_shooter/: __init__.py  _asteroid_field.py  _asteroid_missed_rule.py  _blocking_game_session.py  _blue_ship.py  _check_game_rules_interface.py  _cli_command.py  _cli_entry_point.py  _cli_plugin.py  _di_container.py  _empty_ship.py  _example_scene_manager.py  _fit_to_screen.py  _game_over_overlay.py  _game_over_scene.py  _laser.py  _orange_ship.py  _replay_shooter_button.py  _score_overlay.py  _score_tracker.py  _selectable_ship_menu.py  _ship.py  _ship_button.py  _ship_destroyed_rule.py  _ship_interfaces.py  _ship_powered_up_rule.py  _ship_state_client.py  _shooter_scene.py  _space_collisions.py  _space_rock.py  _stars_background.py  fit_to_screen.py
seagulls-space-shooter-demo/test/seagulls_test/space_shooter/: test_active_ship_client.py  test_asteroid_field.py  test_asteroid_missed_rule.py  test_blue_ship.py  test_cli_command.py  test_cli_entry_point.py  test_empty_ship.py  test_game_over_overlay.py  test_game_over_scene.py  test_orange_ship.py  test_replay_shooter_button.py  test_score_overlay.py  test_score_tracker.py  test_selectable_ship_menu.py  test_ship.py  test_ship_button.py  test_ship_catalog.py  test_ship_destroyed_rule.py  test_shooter_scene_client.py  test_space_collisions.py  test_space_rock.py  test_stars_background.py
seagulls-where-in-the-world-demo/: pyproject.toml
seagulls-where-in-the-world-demo/seagulls_assets/kenney.rpg-ui-pack/: spritesheet.yaml
seagulls-where-in-the-world-demo/src/seagulls/where_in_the_world_demo/: __init__.py  _animals.py  _autoload.py  _cli_command.py  _cli_entry_point.py  _cli_plugin.py  _countries_client.py  _di_container.py  _dishes_client.py  _executable.py  _game_object.py  _main.py  _scene.py  _session_client.py  _session_frame_client.py  _session_state_client.py  _session_window_client.py  _shots_client.py  _size.py  _state.py  _trivia.py  _trivia_image.py  _ui.py
seagulls-where-in-the-world-demo/test/seagulls_test/where_in_the_world_demo/: test_cli_entry_point.py
(+305 files in other folders)
