[tool.poetry]
name = "seagulls"
version = "0.1.0"
description = ""
authors = ["Lorenzo Pisani <zeelot3k@gmail.com>"]
license = "MIT"
packages = [
    {include = "seagulls", from = "src"},
]

[tool.poetry.scripts]
seagulls = 'seagulls.app:main'

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
dependency-injector = "^4.31.1"
colorlog = "^4.8.0"
# These are only needed during development
tox = { version = "^3.23.0", optional = true }
pytest = { version = "^6.2.2", optional = true }
flake8 = { version = "^3.9.0", optional = true }
mypy = { version = "^0.812", optional = true }
trio = "^0.18.0"

[tool.poetry.extras]
dev = ["tox", "pytest", "flake8", "mypy"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--cache-clear"
