[tool.poetry]
name = "seagulls"
version = "0.1.0"
description = ""
authors = ["Lorenzo Pisani <zeelot3k@gmail.com>"]
license = "MIT"
packages = [
    {include = "seagulls", from = "src"},
]

[tool.poetry.scripts]
seagulls = 'seagulls.cli:main'
seagulls-next = 'seagulls.cli:cli_next'

[tool.poetry.dependencies]
python = "^3.8"
pygame = "*"
dependency-injector = "*"
colorlog = "*"
# These are only needed during development
tox = { version = "*", optional = true }
isort = { version = "*", optional = true }
pytest = { version = "*", optional = true }
flake8 = { version = "*", optional = true }
mypy = { version = "*", optional = true }
trio = "*"
PyYAML = "*"

[tool.poetry.extras]
dev = ["tox", "isort", "pytest", "flake8", "mypy"]

[tool.poetry.dev-dependencies]

[tool.isort]
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--cache-clear"
