[tool.seagulls]
name = "seagulls-cat-demos"
entry_point_path = "src/seagulls/cat_demos/_cli_entry_point.py"

[tool.poetry]
name = "seagulls-cat-demos"
version = "0.1.0-rc.1"
description = ""
authors = ["Lorenzo Pisani <zeelot3k@gmail.com>"]
license = "MIT"
packages = [
    {include = "seagulls", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "*"
seagulls-engine = { version = "*", allow-prereleases = true, extras = ["cli"] }
# Development Packages
seagulls-devtools = { version = "*", allow-prereleases = true, optional = true }

[tool.poetry.extras]
dev = ["seagulls-devtools"]

[tool.poetry.dev-dependencies]
seagulls-cli = { path = "../seagulls-cli/", develop = true }
seagulls-engine = { path = "../seagulls-engine/", develop = true, extras = ["cli"] }
seagulls-devtools = { path = "../seagulls-devtools/", develop = true, optional = true }

[tool.poetry.plugins."seagulls.plugins"]
"seagulls-cat-demos" = "seagulls.cat_demos:CatDemosCliPluginEntryPoint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3

[tool.pytest.ini_options]
cache_dir = "../.tmp/seagulls-cat-demos/.pytest_cache"
testpaths = ["test"]
addopts = "-s --cache-clear --cov --cov-report=term-missing --cov-report=xml --junit-xml ../.tmp/seagulls-cat-demos/junit.xml"

[tool.coverage.run]
branch = true
data_file = "../.tmp/seagulls-cat-demos/.coverage"
source = ["src/seagulls"]
relative_files = true

[tool.coverage.xml]
output = "../.tmp/seagulls-cat-demos/coverage.xml"

[tool.mypy]
cache_dir = "../.tmp/seagulls-cat-demos/.mypy_cache"
namespace_packages = true
mypy_path = "src/:test/"
