[tool.poetry]
name = "seagulls-cli"
version = "0.1.0"
description = ""
authors = ["Lorenzo Pisani <zeelot3k@gmail.com>"]
license = "MIT"
packages = [
    {include = "seagulls", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8"
seagulls-engine = "*"
# These are only needed during development
seagulls-devtools = { version = "*", optional = true }

[tool.poetry.extras]
dev = ["seagulls-devtools"]

[tool.poetry.dev-dependencies]
seagulls-engine = { path = "../seagulls-engine/", develop = true, optional = true }
seagulls-devtools = { path = "../seagulls-devtools/", develop = true, optional = true }

[tool.poetry.scripts]
seagulls = "seagulls.seagulls_cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-s --cache-clear --cov src/seagulls --cov-report=term-missing"
