[tool.poetry]
name = "seagulls-cli"
version = "0.1.0"
description = ""
authors = ["Lorenzo Pisani <zeelot3k@gmail.com>"]
license = "MIT"
packages = [
    {include = "seagulls", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8"
seagulls-engine = "*"
# These are only needed during development
seagulls-devtools = { version = "*", optional = true }

[tool.poetry.extras]
dev = ["seagulls-devtools"]

[tool.poetry.dev-dependencies]
seagulls-engine = { path = "../seagulls-engine/", develop = true, optional = true }
seagulls-devtools = { path = "../seagulls-devtools/", develop = true, optional = true }

[tool.poetry.scripts]
seagulls = "seagulls.seagulls_cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-s --cache-clear --cov --cov-report=term-missing --cov-report=xml --junit-xml ../.tmp/seagulls-cli/junit.xml"

[tool.coverage.run]
branch = true
data_file = "../.tmp/seagulls-cli/.coverage"
source = ["src/seagulls"]
relative_files = true

[tool.coverage.xml]
output = "../.tmp/seagulls-cli/coverage.xml"
