[tool.poetry]
name = "seagulls-devtools"
version = "0.1.0"
description = ""
authors = ["Lorenzo Pisani <zeelot3k@gmail.com>"]
license = "MIT"
packages = [
    {include = "seagulls", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8"
colorlog = "*"
pdoc = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocs-awesome-pages-plugin = "*"
seagulls-engine = { version = "*", extras = ["cli"]}
isort = "*"
pytest = "*"
pytest-cov = "*"
flake8 = "*"
mypy = "*"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]
seagulls-cli = { path = "../seagulls-cli/", develop = true }
seagulls-engine = { path = "../seagulls-engine/", develop = true, extras = ["cli"] }

[tool.poetry.plugins."seagulls.plugins"]
"seagulls-engine" = "seagulls.devtools:DevtoolsCliPluginEntryPoint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-s --cache-clear --cov src/seagulls --cov-report=term-missing"
