[tool.poetry]
name = "seagulls-engine"
version = "0.1.0"
description = ""
authors = ["Lorenzo Pisani <zeelot3k@gmail.com>"]
license = "MIT"
packages = [
    {include = "seagulls", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "*"
PyYAML = "*"
importlib-metadata = "*"
seagulls-cli = { version = "*", optional = true }
# These are only needed during development
colorlog = { version = "*", optional = true }
types-PyYAML = { version = "*", optional = true }
seagulls-devtools = { version = "*", optional = true }

[tool.poetry.extras]
cli = [
    "seagulls-cli",
]
dev = [
    "colorlog",
    "types-PyYAML",
    "seagulls-devtools",
    "seagulls-cli",
]

[tool.poetry.dev-dependencies]
seagulls-devtools = { path = "../seagulls-devtools/", develop = true, optional = true }
seagulls-cli = { path = "../seagulls-cli/", develop = true, optional = true }

[tool.poetry.scripts]
seagulls = "seagulls.seagulls_cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-s --cache-clear --cov src/seagulls --cov-report=term-missing"
