[tool.poetry]
name = "seagulls-engine"
version = "0.1.0-rc.1"
description = ""
authors = ["Lorenzo Pisani <zeelot3k@gmail.com>"]
license = "MIT"
packages = [
    {include = "seagulls", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "*"
PyYAML = "*"
importlib-metadata = "*"
# Only required by `seagulls-engine[cli]`
seagulls-cli = { version = "*", optional = true, allow-prereleases = true }
# These are only needed during development
colorlog = { version = "*", optional = true }
types-PyYAML = { version = "*", optional = true }
seagulls-devtools = { version = "*", optional = true, allow-prereleases = true }

[tool.poetry.extras]
cli = [
    "seagulls-cli",
]
dev = [
    "colorlog",
    "types-PyYAML",
    "seagulls-devtools",
    "seagulls-cli",
]

[tool.poetry.dev-dependencies]
seagulls-cli = { path = "../seagulls-cli/", develop = true, optional = true }
seagulls-devtools = { path = "../seagulls-devtools/", develop = true, optional = true }

[tool.poetry.scripts]
seagulls = "seagulls.seagulls_cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3

[tool.pytest.ini_options]
cache_dir = "../.tmp/seagulls-engine/.pytest_cache"
testpaths = ["test"]
addopts = "-s --cache-clear --cov --cov-report=term-missing --cov-report=xml --junit-xml ../.tmp/seagulls-engine/junit.xml"

[tool.coverage.run]
branch = true
data_file = "../.tmp/seagulls-engine/.coverage"
source = ["src/seagulls"]
relative_files = true

[tool.coverage.xml]
output = "../.tmp/seagulls-engine/coverage.xml"

[tool.mypy]
cache_dir = "../.tmp/seagulls-engine/.mypy_cache"
namespace_packages = true
mypy_path = "src/:test/"
