[tool.poetry]
name = "seagulls-space-shooter-demo"
version = "0.1.0"
description = ""
authors = ["Lorenzo Pisani <zeelot3k@gmail.com>"]
license = "MIT"
packages = [
    {include = "seagulls", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "*"
colorlog = "*"
PyYAML = "*"
seagulls-engine = "*"
# These are only needed during development
isort = { version = "*", optional = true }
pytest = { version = "*", optional = true }
flake8 = { version = "*", optional = true }
mypy = { version = "*", optional = true }
pdoc = {version = "*", optional = true }
mkdocs = {version = "*", optional = true }
mkdocs-material = {version = "*", optional = true }
mkdocs-awesome-pages-plugin = {version = "*", optional = true }
types-PyYAML = {version = "*", optional = true}
seagulls-devtools = { version = "*", optional = true }

[tool.poetry.extras]
dev = [
    "isort",
    "pytest",
    "flake8",
    "mypy",
    "pdoc",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-awesome-pages-plugin",
    "types-PyYAML",
    "seagulls-devtools",
]

[tool.poetry.dev-dependencies]
seagulls-engine = { path = "../seagulls-engine/", develop = true }
seagulls-devtools = { path = "../seagulls-devtools/", develop = true, optional = true }

[tool.poetry.plugins."seagulls.plugins"]
"seagulls-space-shooter-demo" = "seagulls.space_shooter:SpaceShooterCliPluginEntryPoint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--cache-clear"
