[tool.poetry]
name = "seagulls-space-shooter-demo"
version = "0.1.0-rc.1"
description = ""
authors = ["Lorenzo Pisani <zeelot3k@gmail.com>"]
license = "MIT"
packages = [
    {include = "seagulls", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "*"
# We want the version of the game engine that includes the `seagulls` cli :)
seagulls-engine = { version = "*", allow-prereleases = true, extras = ["cli"] }
# These are only needed during development
seagulls-devtools = { version = "*", allow-prereleases = true, optional = true }

[tool.poetry.extras]
dev = ["seagulls-devtools"]

[tool.poetry.dev-dependencies]
seagulls-cli = { path = "../seagulls-cli/", develop = true }
seagulls-engine = { path = "../seagulls-engine/", develop = true, extras = ["cli"] }
seagulls-devtools = { path = "../seagulls-devtools/", develop = true, optional = true }

[tool.poetry.plugins."seagulls.plugins"]
"seagulls-space-shooter-demo" = "seagulls.space_shooter:SpaceShooterCliPluginEntryPoint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-s --cache-clear --cov --cov-report=term-missing --cov-report=xml --junit-xml ../.tmp/seagulls-space-shooter-demo/junit.xml"

[tool.coverage.run]
branch = true
data_file = "../.tmp/seagulls-space-shooter-demo/.coverage"
source = ["src/seagulls"]
relative_files = true

[tool.coverage.xml]
output = "../.tmp/seagulls-space-shooter-demo/coverage.xml"
